# saml_formatter

./: README.md  pyproject.toml
saml_formatter/: cli.py
