[tool.poetry]
name = "saml-formatter"
version = "0.1.0"
description = "Decode and format a SAML request from the command line."
authors = ["Ken Baskett <kbaskett@ycharts.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
rich = "^13.7.1"
typer = "^0.12.3"
lxml = "^5.2.1"


[tool.poetry.scripts]
saml = 'saml_formatter.cli:app'


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
